[package]
name = "tide-oso-start"
version = "0.1.0"
authors = ["Allen <fairingrey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
oso = "0.12.1"
oso-derive = "0.12.1"
serde = { version = "1.0.125", features = ["derive"] }
tide = "0.16.0"
